--- a/bower.json
+++ b/bower.json
@@ -5,14 +5,14 @@
     "angular-animate": "~1.5.3",
     "angular-cookies": "~1.5.3",
     "angular-touch": "~1.5.3",
-    "angular-sanitize": "~1.5.3",
+    "angular-sanitize": "~1.4.9",
     "angular-messages": "~1.5.3",
     "angular-aria": "~1.5.3",
     "jquery": "~2.1.4",
     "angular-resource": "~1.5.3",
     "angular-ui-router": "~0.2.15",
     "bootstrap-sass": "~3.3.5",
-    "angular-bootstrap": "~0.14.3",
+    "angular-bootstrap": "^1.3.2",
     "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
@@ -23,17 +23,15 @@
     "font-awesome": "fontawesome#~4.5.0",
     "web-storage-cache": "https://github.com/WQTeam/web-storage-cache.git#~1.0.0",
     "angular-motion": "~0.4.3",
-    "angular-sanitize": "~1.4.9",
-    "restangular": "~1.5.2",
     "satellizer": "~0.14.0",
     "ngprogress": "~1.1.3",
     "fullpage.js": "~2.7.8",
     "angular-scroll": "~1.0.0",
     "ng-table": "~0.8.3",
     "angular-ui-tree": "^2.15.0",
-    "angular-bootstrap": "^1.3.2",
     "bootstrap-additions": "^0.3.1",
-    "angular-websocket": "^1.1.0"
+    "angular-websocket": "^1.1.0",
+    "restangular": "^1.5.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
