--- a/bower.json
+++ b/bower.json
@@ -29,9 +29,10 @@
     "angular-scroll": "~1.0.0",
     "ng-table": "~0.8.3",
     "angular-ui-tree": "^2.15.0",
-    "bootstrap-additions": "^0.3.1",
     "angular-websocket": "^1.1.0",
-    "restangular": "^1.5.2"
+    "restangular": "^1.5.2",
+    "bootstrap-additions": "^0.3.1",
+    "smalot-bootstrap-datetimepicker": "https://github.com/smalot/bootstrap-datetimepicker.git#^2.3.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
