--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,6 @@
     "angular-resource": "~1.5.3",
     "angular-ui-router": "~0.2.15",
     "bootstrap-sass": "~3.3.5",
-    "angular-bootstrap": "^1.3.2",
     "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
@@ -33,7 +32,10 @@
     "restangular": "^1.5.2",
     "bootstrap-additions": "^0.3.1",
     "smalot-bootstrap-datetimepicker": "https://github.com/smalot/bootstrap-datetimepicker.git#^2.3.10",
-    "angular-ui-router-anim-in-out": "^1.0.2"
+    "angular-ui-router-anim-in-out": "^1.0.2",
+    "angular-file-upload": "^2.3.4",
+    "normalize-css": "^4.1.1",
+    "angular-bootstrap": "^1.3.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
