--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "angular-ui-router-anim-in-out": "^1.0.2",
     "angular-file-upload": "^2.3.4",
     "normalize-css": "^4.1.1",
-    "angular-bootstrap": "^1.3.3"
+    "angular-bootstrap": "^1.3.3",
+    "ngSweetAlert": "angular-sweetalert#^1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
